fix: nane & author

--- a/language/en-GB/en-GB.mod_teamspeak3_viewer.ini
+++ b/language/en-GB/en-GB.mod_teamspeak3_viewer.ini
@@ -1,4 +1,4 @@
-MOD_TEAMSPEAK3_VIEWER = "Teamspeak 3 Viewer"
+MOD_TEAMSPEAK3_VIEWER = "TeamSpeak 3 Viewer"
 MOD_TEAMSPEAK3_VIEWER_DESC = ""
 
 MOD_TEAMSPEAK3_VIEWER_HOST_LABEL = "Hostname or IP address"
