--- a/language/de-DE/de-DE.mod_teamspeak3_viewer.ini
+++ b/language/de-DE/de-DE.mod_teamspeak3_viewer.ini
@@ -18,3 +18,6 @@ MOD_TEAMSPEAK3_VIEWER_SERVER_PASSWORD_DESC = ""
 
 MOD_TEAMSPEAK3_VIEWER_CONNECTION_TIMEOUT_LABEL = "Verbindungs Timeout"
 MOD_TEAMSPEAK3_VIEWER_CONNECTION_TIMEOUT_DESC = "Bei Problemen Wert erhöhen (verzögert Ladezeit der Seite)"
+
+MOD_TEAMSPEAK3_VIEWER_CACHE_TIME_LABEL = "Cache Dauer"
+MOD_TEAMSPEAK3_VIEWER_CACHE_TIME_DESC = "Der Werte sollte nicht zu niedring sein sofern die Server IP dieser Joomla Installation nicht in der Query-Whitelist des Teamspeak Servers steht."
