--- a/language/en-GB/en-GB.mod_teamspeak3_viewer.ini
+++ b/language/en-GB/en-GB.mod_teamspeak3_viewer.ini
@@ -20,4 +20,4 @@ MOD_TEAMSPEAK3_VIEWER_CONNECTION_TIMEOUT_LABEL = "Connection Timeout"
 MOD_TEAMSPEAK3_VIEWER_CONNECTION_TIMEOUT_DESC = "Increase value in case of problems (delayed loading time of the page)"
 
 MOD_TEAMSPEAK3_VIEWER_CACHE_TIME_LABEL = "Cachetime"
-MOD_TEAMSPEAK3_VIEWER_CACHE_TIME_DESC = "Value shouldn't be very low if the server IP of this jommla installation is not listed in  your teamspeak server's query-whitelist."
+MOD_TEAMSPEAK3_VIEWER_CACHE_TIME_DESC = "Minutes. Value shouldn't be very low if the server IP of this jommla installation is not listed in  your teamspeak server's query-whitelist."
