new: infos view

--- a/language/en-GB/en-GB.mod_teamspeak3_viewer.ini
+++ b/language/en-GB/en-GB.mod_teamspeak3_viewer.ini
@@ -1,23 +1,23 @@
 MOD_TEAMSPEAK3_VIEWER = "TeamSpeak 3 Viewer"
 MOD_TEAMSPEAK3_VIEWER_DESC = ""
 
-MOD_TEAMSPEAK3_VIEWER_HOST_LABEL = "Hostname or IP address"
+MOD_TEAMSPEAK3_VIEWER_HOST_LABEL = "Host"
 MOD_TEAMSPEAK3_VIEWER_HOST_DESC = " Fully-qualified hostname(e.g. www.domain.tld) or IP address"
 
-MOD_TEAMSPEAK3_VIEWER_QUERY_PORT_LABEL = "Server Query Port"
-MOD_TEAMSPEAK3_VIEWER_QUERY_PORT_DESC = "Often called telnet port.  Standard: 10011."
+MOD_TEAMSPEAK3_VIEWER_UDP_PORT_LABEL = "Port"
+MOD_TEAMSPEAK3_VIEWER_UDP_PORT_DESC = "Port which is used to connect with the TeamSpeak 3 client."
 
-MOD_TEAMSPEAK3_VIEWER_UDP_PORT_LABEL = "Server UDP Port"
-MOD_TEAMSPEAK3_VIEWER_UDP_PORT_DESC = "Port which is used to connect with the TeamSpeak 3 client. Standard: 9987."
+MOD_TEAMSPEAK3_VIEWER_QUERY_PORT_LABEL = "Query Port"
+MOD_TEAMSPEAK3_VIEWER_QUERY_PORT_DESC = "Often called telnet port."
 
-MOD_TEAMSPEAK3_VIEWER_SERVER_LOGIN_LABEL = "Username"
+MOD_TEAMSPEAK3_VIEWER_SERVER_LOGIN_LABEL = "Query Username"
 MOD_TEAMSPEAK3_VIEWER_SERVER_LOGIN_DESC = "Username and password are generated at &quot;Tools&quot; -> &quot;ServerQuery Login&quot;."
 
-MOD_TEAMSPEAK3_VIEWER_SERVER_PASSWORD_LABEL = "Password"
+MOD_TEAMSPEAK3_VIEWER_SERVER_PASSWORD_LABEL = "Query Password"
 MOD_TEAMSPEAK3_VIEWER_SERVER_PASSWORD_DESC = ""
 
-MOD_TEAMSPEAK3_VIEWER_CONNECTION_TIMEOUT_LABEL = "Connection Timeout"
-MOD_TEAMSPEAK3_VIEWER_CONNECTION_TIMEOUT_DESC = "Increase value in case of problems (delayed loading time of the page)"
+MOD_TEAMSPEAK3_VIEWER_CONNECTION_TIMEOUT_LABEL = "Timeout (Seconds)"
+MOD_TEAMSPEAK3_VIEWER_CONNECTION_TIMEOUT_DESC = "Seconds. Increase value in case of problems (delayed loading time of the page)"
 
-MOD_TEAMSPEAK3_VIEWER_CACHE_TIME_LABEL = "Cachetime"
+MOD_TEAMSPEAK3_VIEWER_CACHE_TIME_LABEL = "Cachetime (Minutes)"
 MOD_TEAMSPEAK3_VIEWER_CACHE_TIME_DESC = "Minutes. Value shouldn't be very low if the server IP of this jommla installation is not listed in  your teamspeak server's query-whitelist."
