fix: missing english translation

--- a/language/de-DE/de-DE.mod_teamspeak3_viewer.ini
+++ b/language/de-DE/de-DE.mod_teamspeak3_viewer.ini
@@ -48,11 +48,11 @@ MOD_TEAMSPEAK3_VIEWER_INFOS_VIRTUALSERVER_CLIENTSONLINE = "Clients Online"
 MOD_TEAMSPEAK3_VIEWER_INFOS_VIRTUALSERVER_CHANNELSONLINE = "Anzahl Channels"
 MOD_TEAMSPEAK3_VIEWER_INFOS_VIRTUALSERVER_CREATED = "Server erstellt"
 
-MOD_TEAMSPEAK3_VIEWER_INFOS_CONNECTION_FILETRANSFER_BANDWIDTH_SENT = "Dateitransfare Bandbreite ausgehend"
-MOD_TEAMSPEAK3_VIEWER_INFOS_CONNECTION_FILETRANSFER_BANDWIDTH_RECEIVED = "Dateitransfare Bandbreite eingehend"
+MOD_TEAMSPEAK3_VIEWER_INFOS_CONNECTION_FILETRANSFER_BANDWIDTH_SENT = "Dateien: Bandbreite ausgehend"
+MOD_TEAMSPEAK3_VIEWER_INFOS_CONNECTION_FILETRANSFER_BANDWIDTH_RECEIVED = "Dateien: Bandbreite eingehend"
 
-MOD_TEAMSPEAK3_VIEWER_INFOS_CONNECTION_FILETRANSFER_BYTES_SENT_TOTAL = "Dateitransfare Bytes ausgehend"
-MOD_TEAMSPEAK3_VIEWER_INFOS_CONNECTION_FILETRANSFER_BYTES_RECEIVED_TOTAL = "Dateitransfare Bytes eingehend"
+MOD_TEAMSPEAK3_VIEWER_INFOS_CONNECTION_FILETRANSFER_BYTES_SENT_TOTAL = "Dateien: Traffic ausgehend"
+MOD_TEAMSPEAK3_VIEWER_INFOS_CONNECTION_FILETRANSFER_BYTES_RECEIVED_TOTAL = "Dateien: Traffic eingehend"
 
 MOD_TEAMSPEAK3_VIEWER_INFOS_CONNECTION_PACKETS_SENT_SPEECH = "Sprache: Pakete ausgehend"
 MOD_TEAMSPEAK3_VIEWER_INFOS_CONNECTION_PACKETS_RECEIVED_SPEECH = "Sprache: Pakete eingehend"
