--- a/language/en-GB/en-GB.mod_teamspeak3_viewer.ini
+++ b/language/en-GB/en-GB.mod_teamspeak3_viewer.ini
@@ -21,3 +21,57 @@ MOD_TEAMSPEAK3_VIEWER_CONNECTION_TIMEOUT_DESC = "Seconds. Increase value in case
 
 MOD_TEAMSPEAK3_VIEWER_CACHE_TIME_LABEL = "Cachetime (Minutes)"
 MOD_TEAMSPEAK3_VIEWER_CACHE_TIME_DESC = "Minutes. Value shouldn't be very low if the server IP of this jommla installation is not listed in  your teamspeak server's query-whitelist."
+
+MOD_TEAMSPEAK3_VIEWER_FIELDSET_LAYOUT_LABEL = "Layout"
+
+MOD_TEAMSPEAK3_VIEWER_LAYOUT_VIEWER = "Channels and Clients"
+MOD_TEAMSPEAK3_VIEWER_LAYOUT_INFOS = "Server Informationen"
+
+MOD_TEAMSPEAK3_VIEWER_VIEWER_INFOS_LABEL = "Viewer with Infos"
+MOD_TEAMSPEAK3_VIEWER_VIEWER_INFOS_DESC = "show informations in channel and clients view too"
+
+MOD_TEAMSPEAK3_VIEWER_TOOLTIP_LABEL = "Tooltips"
+MOD_TEAMSPEAK3_VIEWER_TOOLTIP_DESC = "replace titles with joomla tooltips"
+
+MOD_TEAMSPEAK3_VIEWER_NO_QUERY_CLIENTS_LABEL = "hide query clients"
+MOD_TEAMSPEAK3_VIEWER_NO_QUERY_CLIENTS_DESC = ""
+
+MOD_TEAMSPEAK3_VIEWER_INFOS_LABEL = "Informations"
+MOD_TEAMSPEAK3_VIEWER_INFOS_DESC = ""
+
+MOD_TEAMSPEAK3_VIEWER_INFOS_NOTHING_SELECTED = "no displayable informations checked"
+
+MOD_TEAMSPEAK3_VIEWER_INFOS_VIRTUALSERVER_PLATFORM = "Server OS"
+MOD_TEAMSPEAK3_VIEWER_INFOS_VIRTUALSERVER_VERSION = "Server Version"
+MOD_TEAMSPEAK3_VIEWER_INFOS_VIRTUALSERVER_MAXCLIENTS = "Max Clients"
+MOD_TEAMSPEAK3_VIEWER_INFOS_VIRTUALSERVER_CLIENTSONLINE = "Clients Online"
+MOD_TEAMSPEAK3_VIEWER_INFOS_VIRTUALSERVER_CHANNELSONLINE = "Channels"
+MOD_TEAMSPEAK3_VIEWER_INFOS_VIRTUALSERVER_CREATED = "Server created"
+
+MOD_TEAMSPEAK3_VIEWER_INFOS_CONNECTION_FILETRANSFER_BANDWIDTH_SENT = "Files: Bandwith sent"
+MOD_TEAMSPEAK3_VIEWER_INFOS_CONNECTION_FILETRANSFER_BANDWIDTH_RECEIVED = "Files: Bandwith received"
+
+MOD_TEAMSPEAK3_VIEWER_INFOS_CONNECTION_FILETRANSFER_BYTES_SENT_TOTAL = "Files: Bytes sent"
+MOD_TEAMSPEAK3_VIEWER_INFOS_CONNECTION_FILETRANSFER_BYTES_RECEIVED_TOTAL = "Files: Bytes received"
+
+MOD_TEAMSPEAK3_VIEWER_INFOS_CONNECTION_PACKETS_SENT_SPEECH = "Speech: Packets sent"
+MOD_TEAMSPEAK3_VIEWER_INFOS_CONNECTION_PACKETS_RECEIVED_SPEECH = "Speech: Packets received"
+
+MOD_TEAMSPEAK3_VIEWER_INFOS_CONNECTION_BYTES_SENT_SPEECH = "Speech: Traffic sent"
+MOD_TEAMSPEAK3_VIEWER_INFOS_CONNECTION_BYTES_RECEIVED_SPEECH = "Speech: Traffic received"
+
+MOD_TEAMSPEAK3_VIEWER_INFOS_CONNECTION_PACKETS_SENT_KEEPALIVE = "Keepalive: Packets sent"
+MOD_TEAMSPEAK3_VIEWER_INFOS_CONNECTION_PACKETS_RECEIVED_KEEPALIVE = "Keepalive: Packets received"
+MOD_TEAMSPEAK3_VIEWER_INFOS_CONNECTION_BYTES_SENT_KEEPALIVE = "Keepalive: Traffic sent"
+MOD_TEAMSPEAK3_VIEWER_INFOS_CONNECTION_BYTES_RECEIVED_KEEPALIVE = "Keepalive: Traffic received"
+
+MOD_TEAMSPEAK3_VIEWER_INFOS_CONNECTION_PACKETS_SENT_CONTROL = "Controlling: Packets sent"
+MOD_TEAMSPEAK3_VIEWER_INFOS_CONNECTION_PACKETS_RECEIVED_CONTROL = "Controlling: Packets received"
+MOD_TEAMSPEAK3_VIEWER_INFOS_CONNECTION_BYTES_SENT_CONTROL = "Controlling: Traffic sent"
+MOD_TEAMSPEAK3_VIEWER_INFOS_CONNECTION_BYTES_RECEIVED_CONTROL = "Controlling: Traffic received"
+
+MOD_TEAMSPEAK3_VIEWER_INFOS_CONNECTION_PACKETS_SENT_TOTAL = "Total: Packets sent"
+MOD_TEAMSPEAK3_VIEWER_INFOS_CONNECTION_PACKETS_RECEIVED_TOTAL = "Total: Packets received"
+
+MOD_TEAMSPEAK3_VIEWER_INFOS_CONNECTION_BYTES_SENT_TOTAL = "Total: Traffic sent"
+MOD_TEAMSPEAK3_VIEWER_INFOS_CONNECTION_BYTES_RECEIVED_TOTAL = "Total: Traffic received"
