close: #8 close: #2 close: #3 close: #1

--- a/language/de-DE/de-DE.mod_teamspeak3.ini
+++ b/language/de-DE/de-DE.mod_teamspeak3.ini
@@ -1,20 +1,25 @@
 MOD_TEAMSPEAK3 = "TeamSpeak 3"
 MOD_TEAMSPEAK3_DESC = "Anzeige aller Channels und Clients und/oder Server Informationen"
 
-MOD_TEAMSPEAK3_HOST_LABEL = "Host"
-MOD_TEAMSPEAK3_HOST_DESC = " Fully-Qualified Host Name (z.V. www.domain.tld) oder IP Adresse."
+MOD_TEAMSPEAK3_BASIC_CONFIGURATION_MISSING = "Bitte das Modul mit allen erforderlichen Parametern konfigurieren"
 
-MOD_TEAMSPEAK3_UDP_PORT_LABEL = "Port"
-MOD_TEAMSPEAK3_UDP_PORT_DESC = "Das ist der Port welcher im Teamspeak 3 Client zum Verbinden angegeben wird."
+MOD_TEAMSPEAK3_SERVER_HOST_LABEL = "Server-Host"
+MOD_TEAMSPEAK3_SERVER_HOST_DESC = " Fully-Qualified Host Name (z.V. www.domain.tld) oder IP Adresse."
+
+MOD_TEAMSPEAK3_SERVER_PORT_LABEL = "Server Port"
+MOD_TEAMSPEAK3_SERVER_PORT_DESC = "Das ist der Port welcher im Teamspeak 3 Client zum Verbinden angegeben wird."
+
+MOD_TEAMSPEAK3_SERVER_PASSWORD_LABEL = "Server Passwort"
+MOD_TEAMSPEAK3_SERVER_PASSWORD_DESC = "Falls vergeben, wird für die Join-Links verwendet"
 
 MOD_TEAMSPEAK3_QUERY_PORT_LABEL = "Query Port"
 MOD_TEAMSPEAK3_QUERY_PORT_DESC = "Wird oft auch Telnet Port genannt."
 
-MOD_TEAMSPEAK3_SERVER_LOGIN_LABEL = "Query Benutzername"
-MOD_TEAMSPEAK3_SERVER_LOGIN_DESC = "Benutzername und Passwort werden im TS3-Client unter &quot;Extras&quot; -> &quot;ServerQuery Login&quot; generiert."
+MOD_TEAMSPEAK3_QUERY_LOGIN_LABEL = "Query Benutzername"
+MOD_TEAMSPEAK3_QUERY_LOGIN_DESC = "Benutzername und Passwort werden im TS3-Client unter &quot;Extras&quot; -> &quot;ServerQuery Login&quot; generiert."
 
-MOD_TEAMSPEAK3_SERVER_PASSWORD_LABEL = "Query Passwort"
-MOD_TEAMSPEAK3_SERVER_PASSWORD_DESC = ""
+MOD_TEAMSPEAK3_QUERY_PASSWORD_LABEL = "Query Passwort"
+MOD_TEAMSPEAK3_QUERY_PASSWORD_DESC = ""
 
 MOD_TEAMSPEAK3_CONNECTION_TIMEOUT_LABEL = "Timeout (Sekunden)"
 MOD_TEAMSPEAK3_CONNECTION_TIMEOUT_DESC = "Bei Problemen Wert erhöhen (verzögert Ladezeit der Seite)"
@@ -76,3 +81,20 @@ MOD_TEAMSPEAK3_INFOS_CONNECTION_PACKETS_RECEIVED_TOTAL = "Total: Pakete eingehen
 
 MOD_TEAMSPEAK3_INFOS_CONNECTION_BYTES_SENT_TOTAL = "Total: Traffic ausgehend"
 MOD_TEAMSPEAK3_INFOS_CONNECTION_BYTES_RECEIVED_TOTAL = "Total: Traffic eingehend"
+
+MOD_TEAMSPEAK3_FIELDSET_OTHER_LABEL = "Sonstiges"
+
+MOD_TEAMSPEAK3_CHANNEL_ID_LABEL = "Erster Channel (Eintrittspunkt)"
+MOD_TEAMSPEAK3_CHANNEL_ID_DESC = "ID. Zeigt nur diese und alle Sub-Channels an (bspw. auf Shared-Server)"
+
+MOD_TEAMSPEAK3_CHANNEL_HIDE_LABEL = "Channel IDs Ausblenden"
+MOD_TEAMSPEAK3_CHANNEL_HIDE_DESC = "z.B. 1,2,3,4"
+
+MOD_TEAMSPEAK3_CLIENT_HIDE_LABEL = "Player IDs Ausblenden"
+MOD_TEAMSPEAK3_CLIENT_HIDE_DESC = "z.B. 1,2,3,4"
+
+MOD_TEAMSPEAK3_JOIN_LINKS_LABEL = "Join Links"
+MOD_TEAMSPEAK3_JOIN_LINKS_DESC = "klickbare Channels und Servername zum Joinen"
+
+MOD_TEAMSPEAK3_MODULE_TITLE_LABEL = "Modultitel ersetzen"
+MOD_TEAMSPEAK3_MODULE_TITLE_DESC = "Ersetzt den Modultitel mit dem Servernamen. Außerdem wird der Servername im Baum nicht mehr angezeigt"
