--- a/language/en-GB/en-GB.mod_teamspeak3.ini
+++ b/language/en-GB/en-GB.mod_teamspeak3.ini
@@ -1,20 +1,25 @@
 MOD_TEAMSPEAK3 = "TeamSpeak 3"
 MOD_TEAMSPEAK3_DESC = ""
 
-MOD_TEAMSPEAK3_HOST_LABEL = "Host"
-MOD_TEAMSPEAK3_HOST_DESC = " Fully-qualified hostname(e.g. www.domain.tld) or IP address"
+MOD_TEAMSPEAK3_BASIC_CONFIGURATION_MISSING = "please configure this modul with all required params"
 
-MOD_TEAMSPEAK3_UDP_PORT_LABEL = "Port"
-MOD_TEAMSPEAK3_UDP_PORT_DESC = "Port which is used to connect with the TeamSpeak 3 client."
+MOD_TEAMSPEAK3_SERVER_HOST_LABEL = "Server Host"
+MOD_TEAMSPEAK3_SERVER_HOST_DESC = " Fully-qualified hostname(e.g. www.domain.tld) or IP address"
+
+MOD_TEAMSPEAK3_SERVER_PORT_LABEL = "Server Port"
+MOD_TEAMSPEAK3_SERVER_PORT_DESC = "Port which is used to connect with the TeamSpeak 3 client."
+
+MOD_TEAMSPEAK3_SERVER_PASSWORD_LABEL = "Server Password"
+MOD_TEAMSPEAK3_SERVER_PASSWORD_DESC = "used for join links if enabled"
 
 MOD_TEAMSPEAK3_QUERY_PORT_LABEL = "Query Port"
 MOD_TEAMSPEAK3_QUERY_PORT_DESC = "Often called telnet port."
 
-MOD_TEAMSPEAK3_SERVER_LOGIN_LABEL = "Query Username"
-MOD_TEAMSPEAK3_SERVER_LOGIN_DESC = "Username and password are generated at &quot;Tools&quot; -> &quot;ServerQuery Login&quot;."
+MOD_TEAMSPEAK3_QUERY_LOGIN_LABEL = "Query Username"
+MOD_TEAMSPEAK3_QUERY_LOGIN_DESC = "Username and password are generated at &quot;Tools&quot; -> &quot;ServerQuery Login&quot;."
 
-MOD_TEAMSPEAK3_SERVER_PASSWORD_LABEL = "Query Password"
-MOD_TEAMSPEAK3_SERVER_PASSWORD_DESC = ""
+MOD_TEAMSPEAK3_QUERY_PASSWORD_LABEL = "Query Password"
+MOD_TEAMSPEAK3_QUERY_PASSWORD_DESC = ""
 
 MOD_TEAMSPEAK3_CONNECTION_TIMEOUT_LABEL = "Timeout (Seconds)"
 MOD_TEAMSPEAK3_CONNECTION_TIMEOUT_DESC = "Seconds. Increase value in case of problems (delayed loading time of the page)"
@@ -76,3 +81,20 @@ MOD_TEAMSPEAK3_INFOS_CONNECTION_PACKETS_RECEIVED_TOTAL = "Total: Packets receive
 
 MOD_TEAMSPEAK3_INFOS_CONNECTION_BYTES_SENT_TOTAL = "Total: Traffic sent"
 MOD_TEAMSPEAK3_INFOS_CONNECTION_BYTES_RECEIVED_TOTAL = "Total: Traffic received"
+
+MOD_TEAMSPEAK3_FIELDSET_OTHER_LABEL = "other"
+
+MOD_TEAMSPEAK3_CHANNEL_ID_LABEL = "First channel (entry point)"
+MOD_TEAMSPEAK3_CHANNEL_ID_DESC = "ID. display only this and sub channel (eg. on Shared-Server)"
+
+MOD_TEAMSPEAK3_CHANNEL_HIDE_LABEL = "Channel IDs hide"
+MOD_TEAMSPEAK3_CHANNEL_HIDE_DESC = "eg. 1,2,3,4"
+
+MOD_TEAMSPEAK3_CLIENT_HIDE_LABEL = "Player IDs hide"
+MOD_TEAMSPEAK3_CLIENT_HIDE_DESC = "eg 1,2,3,4"
+
+MOD_TEAMSPEAK3_JOIN_LINKS_LABEL = "Join links"
+MOD_TEAMSPEAK3_JOIN_LINKS_DESC = "clickable channel and server links to join"
+
+MOD_TEAMSPEAK3_MODULE_TITLE_LABEL = "replace module title"
+MOD_TEAMSPEAK3_MODULE_TITLE_DESC = "with server name and hide server name from tree"
