enh: join methods

--- a/language/de-DE/de-DE.mod_teamspeak3.ini
+++ b/language/de-DE/de-DE.mod_teamspeak3.ini
@@ -9,9 +9,6 @@ MOD_TEAMSPEAK3_SERVER_HOST_DESC = " Fully-Qualified Host Name (z.V. www.domain.t
 MOD_TEAMSPEAK3_SERVER_PORT_LABEL = "Server Port"
 MOD_TEAMSPEAK3_SERVER_PORT_DESC = "Das ist der Port welcher im Teamspeak 3 Client zum Verbinden angegeben wird."
 
-MOD_TEAMSPEAK3_SERVER_PASSWORD_LABEL = "Server Passwort"
-MOD_TEAMSPEAK3_SERVER_PASSWORD_DESC = "Falls vergeben, wird für die Join-Links verwendet"
-
 MOD_TEAMSPEAK3_QUERY_PORT_LABEL = "Query Port"
 MOD_TEAMSPEAK3_QUERY_PORT_DESC = "Wird oft auch Telnet Port genannt."
 
@@ -82,6 +79,20 @@ MOD_TEAMSPEAK3_INFOS_CONNECTION_PACKETS_RECEIVED_TOTAL = "Total: Pakete eingehen
 MOD_TEAMSPEAK3_INFOS_CONNECTION_BYTES_SENT_TOTAL = "Total: Traffic ausgehend"
 MOD_TEAMSPEAK3_INFOS_CONNECTION_BYTES_RECEIVED_TOTAL = "Total: Traffic eingehend"
 
+MOD_TEAMSPEAK3_FIELDSET_JOIN_LABEL = "Join"
+
+MOD_TEAMSPEAK3_JOIN_LINKS_LABEL = "Join Links"
+MOD_TEAMSPEAK3_JOIN_LINKS_DESC = "klickbare Channels und Servername zum Joinen"
+
+MOD_TEAMSPEAK3_JOIN_PASSWORD_LABEL = "Join Passwort"
+MOD_TEAMSPEAK3_JOIN_PASSWORD_DESC = "Server Passwort"
+
+MOD_TEAMSPEAK3_JOIN_NICKNAME_GUEST_LABEL = "Gast Nickname"
+MOD_TEAMSPEAK3_JOIN_NICKNAME_GUEST_DESC = "Nickname für Gäste welche über das Modul joinen"
+
+MOD_TEAMSPEAK3_JOIN_REGISTERED_NICKNAME_MAP_LABEL = "Benutzer Nickname (Mapping)"
+MOD_TEAMSPEAK3_JOIN_REGISTERED_NICKNAME_MAP_DESC = "Joomla Benutzerfeld welches als Nickname verwendet wird"
+
 MOD_TEAMSPEAK3_FIELDSET_OTHER_LABEL = "Sonstiges"
 
 MOD_TEAMSPEAK3_CHANNEL_ID_LABEL = "Erster Channel (Eintrittspunkt)"
@@ -92,9 +103,6 @@ MOD_TEAMSPEAK3_CHANNEL_HIDE_DESC = "z.B. 1,2,3,4"
 
 MOD_TEAMSPEAK3_CLIENT_HIDE_LABEL = "Player IDs Ausblenden"
 MOD_TEAMSPEAK3_CLIENT_HIDE_DESC = "z.B. 1,2,3,4"
-
-MOD_TEAMSPEAK3_JOIN_LINKS_LABEL = "Join Links"
-MOD_TEAMSPEAK3_JOIN_LINKS_DESC = "klickbare Channels und Servername zum Joinen"
 
 MOD_TEAMSPEAK3_MODULE_TITLE_LABEL = "Modultitel ersetzen"
 MOD_TEAMSPEAK3_MODULE_TITLE_DESC = "Ersetzt den Modultitel mit dem Servernamen. Außerdem wird der Servername im Baum nicht mehr angezeigt"
