--- a/language/en-GB/en-GB.mod_teamspeak3.ini
+++ b/language/en-GB/en-GB.mod_teamspeak3.ini
@@ -9,9 +9,6 @@ MOD_TEAMSPEAK3_SERVER_HOST_DESC = " Fully-qualified hostname(e.g. www.domain.tld
 MOD_TEAMSPEAK3_SERVER_PORT_LABEL = "Server Port"
 MOD_TEAMSPEAK3_SERVER_PORT_DESC = "Port which is used to connect with the TeamSpeak 3 client."
 
-MOD_TEAMSPEAK3_SERVER_PASSWORD_LABEL = "Server Password"
-MOD_TEAMSPEAK3_SERVER_PASSWORD_DESC = "used for join links if enabled"
-
 MOD_TEAMSPEAK3_QUERY_PORT_LABEL = "Query Port"
 MOD_TEAMSPEAK3_QUERY_PORT_DESC = "Often called telnet port."
 
@@ -82,7 +79,22 @@ MOD_TEAMSPEAK3_INFOS_CONNECTION_PACKETS_RECEIVED_TOTAL = "Total: Packets receive
 MOD_TEAMSPEAK3_INFOS_CONNECTION_BYTES_SENT_TOTAL = "Total: Traffic sent"
 MOD_TEAMSPEAK3_INFOS_CONNECTION_BYTES_RECEIVED_TOTAL = "Total: Traffic received"
 
-MOD_TEAMSPEAK3_FIELDSET_OTHER_LABEL = "other"
+MOD_TEAMSPEAK3_FIELDSET_JOIN_LABEL = "Join"
+
+MOD_TEAMSPEAK3_JOIN_LINKS_LABEL = "Join Links"
+MOD_TEAMSPEAK3_JOIN_LINKS_DESC = "clickable links to join directly on server or channel"
+
+MOD_TEAMSPEAK3_JOIN_PASSWORD_LABEL = "Join Password"
+MOD_TEAMSPEAK3_JOIN_PASSWORD_DESC = "Server Password"
+
+MOD_TEAMSPEAK3_JOIN_NICKNAME_GUEST_LABEL = "GUest Nickname"
+MOD_TEAMSPEAK3_JOIN_NICKNAME_GUEST_DESC = "Nickname for guest who join over this module"
+
+MOD_TEAMSPEAK3_JOIN_REGISTERED_NICKNAME_MAP_LABEL = "Member Nickname (Mapping)"
+MOD_TEAMSPEAK3_JOIN_REGISTERED_NICKNAME_MAP_DESC = "Joomla Userfield which used as nickname"
+
+
+MOD_TEAMSPEAK3_FIELDSET_OTHER_LABEL = "Other"
 
 MOD_TEAMSPEAK3_CHANNEL_ID_LABEL = "First channel (entry point)"
 MOD_TEAMSPEAK3_CHANNEL_ID_DESC = "ID. display only this and sub channel (eg. on Shared-Server)"
