--- a/language/de-DE/de-DE.mod_teamspeak3.ini
+++ b/language/de-DE/de-DE.mod_teamspeak3.ini
@@ -32,8 +32,8 @@ MOD_TEAMSPEAK3_LAYOUT_INFOS = "Server Informationen"
 MOD_TEAMSPEAK3_VIEWER_INFOS_LABEL = "Viewer mit Infos"
 MOD_TEAMSPEAK3_VIEWER_INFOS_DESC = "Zeigt Informationen auch unter dem Viewer an"
 
-MOD_TEAMSPEAK3_TOOLTIP_LABEL = "Tooltips"
-MOD_TEAMSPEAK3_TOOLTIP_DESC = "Wandelt Titel in Joomla Tooltips um"
+MOD_TEAMSPEAK3_AVATARS_LABEL = "Avatare"
+MOD_TEAMSPEAK3_AVATARS_DESC = "Zeige Avatare im Tooltip (benötigt php5-gd extension)"
 
 MOD_TEAMSPEAK3_NO_QUERY_CLIENTS_LABEL = "Verstecke Query Clients"
 MOD_TEAMSPEAK3_NO_QUERY_CLIENTS_DESC = ""
@@ -87,11 +87,8 @@ MOD_TEAMSPEAK3_JOIN_LINKS_DESC = "klickbare Channels und Servername zum Joinen"
 MOD_TEAMSPEAK3_JOIN_PASSWORD_LABEL = "Join Passwort"
 MOD_TEAMSPEAK3_JOIN_PASSWORD_DESC = "Server Passwort"
 
-MOD_TEAMSPEAK3_JOIN_NICKNAME_GUEST_LABEL = "Gast Nickname"
-MOD_TEAMSPEAK3_JOIN_NICKNAME_GUEST_DESC = "Nickname für Gäste welche über das Modul joinen"
-
-MOD_TEAMSPEAK3_JOIN_REGISTERED_NICKNAME_MAP_LABEL = "Benutzer Nickname (Mapping)"
-MOD_TEAMSPEAK3_JOIN_REGISTERED_NICKNAME_MAP_DESC = "Joomla Benutzerfeld welches als Nickname verwendet wird"
+MOD_TEAMSPEAK3_JOIN_NICKNAME_LABEL = "Nickname"
+MOD_TEAMSPEAK3_JOIN_NICKNAME_DESC = "Nickname Vorgabe wenn man über das Modul joint, z.B.: WebGast"
 
 MOD_TEAMSPEAK3_FIELDSET_OTHER_LABEL = "Sonstiges"
 
