--- a/language/en-GB/en-GB.mod_teamspeak3.ini
+++ b/language/en-GB/en-GB.mod_teamspeak3.ini
@@ -32,8 +32,8 @@ MOD_TEAMSPEAK3_LAYOUT_INFOS = "Server Informationen"
 MOD_TEAMSPEAK3_VIEWER_INFOS_LABEL = "Viewer with Infos"
 MOD_TEAMSPEAK3_VIEWER_INFOS_DESC = "show informations in channel and clients view too"
 
-MOD_TEAMSPEAK3_TOOLTIP_LABEL = "Tooltips"
-MOD_TEAMSPEAK3_TOOLTIP_DESC = "replace titles with joomla tooltips"
+MOD_TEAMSPEAK3_AVATARS_LABEL = "Avatars"
+MOD_TEAMSPEAK3_AVATARS_DESC = "display client avatar in tooltip (required php5-gd extension)"
 
 MOD_TEAMSPEAK3_NO_QUERY_CLIENTS_LABEL = "hide query clients"
 MOD_TEAMSPEAK3_NO_QUERY_CLIENTS_DESC = ""
@@ -87,12 +87,8 @@ MOD_TEAMSPEAK3_JOIN_LINKS_DESC = "clickable links to join directly on server or 
 MOD_TEAMSPEAK3_JOIN_PASSWORD_LABEL = "Join Password"
 MOD_TEAMSPEAK3_JOIN_PASSWORD_DESC = "Server Password"
 
-MOD_TEAMSPEAK3_JOIN_NICKNAME_GUEST_LABEL = "GUest Nickname"
-MOD_TEAMSPEAK3_JOIN_NICKNAME_GUEST_DESC = "Nickname for guest who join over this module"
-
-MOD_TEAMSPEAK3_JOIN_REGISTERED_NICKNAME_MAP_LABEL = "Member Nickname (Mapping)"
-MOD_TEAMSPEAK3_JOIN_REGISTERED_NICKNAME_MAP_DESC = "Joomla Userfield which used as nickname"
-
+MOD_TEAMSPEAK3_JOIN_NICKNAME_LABEL = "Guest Nickname"
+MOD_TEAMSPEAK3_JOIN_NICKNAME_DESC = "Nickname to use who join over this module, e.g WebGuest"
 
 MOD_TEAMSPEAK3_FIELDSET_OTHER_LABEL = "Other"
 
@@ -104,9 +100,6 @@ MOD_TEAMSPEAK3_CHANNEL_HIDE_DESC = "eg. 1,2,3,4"
 
 MOD_TEAMSPEAK3_CLIENT_HIDE_LABEL = "Player IDs hide"
 MOD_TEAMSPEAK3_CLIENT_HIDE_DESC = "eg 1,2,3,4"
-
-MOD_TEAMSPEAK3_JOIN_LINKS_LABEL = "Join links"
-MOD_TEAMSPEAK3_JOIN_LINKS_DESC = "clickable channel and server links to join"
 
 MOD_TEAMSPEAK3_MODULE_TITLE_LABEL = "replace module title"
 MOD_TEAMSPEAK3_MODULE_TITLE_DESC = "with server name and hide server name from tree"
