enh: join options

--- a/language/de-DE/de-DE.mod_teamspeak3.ini
+++ b/language/de-DE/de-DE.mod_teamspeak3.ini
@@ -82,7 +82,10 @@ MOD_TEAMSPEAK3_INFOS_CONNECTION_BYTES_RECEIVED_TOTAL = "Total: Traffic eingehend
 MOD_TEAMSPEAK3_FIELDSET_JOIN_LABEL = "Join"
 
 MOD_TEAMSPEAK3_JOIN_LINKS_LABEL = "Join Links"
-MOD_TEAMSPEAK3_JOIN_LINKS_DESC = "klickbare Channels und Servername zum Joinen"
+MOD_TEAMSPEAK3_JOIN_LINKS_DESC = "klickbare Channels und/oder Servername zum Joinen"
+
+MOD_TEAMSPEAK3_JOIN_LINKS_SERVER = "Server"
+MOD_TEAMSPEAK3_JOIN_LINKS_ALL = "Server und Channel"
 
 MOD_TEAMSPEAK3_JOIN_PASSWORD_LABEL = "Join Passwort"
 MOD_TEAMSPEAK3_JOIN_PASSWORD_DESC = "Server Passwort"
