--- a/language/en-GB/en-GB.mod_teamspeak3.ini
+++ b/language/en-GB/en-GB.mod_teamspeak3.ini
@@ -84,6 +84,9 @@ MOD_TEAMSPEAK3_FIELDSET_JOIN_LABEL = "Join"
 MOD_TEAMSPEAK3_JOIN_LINKS_LABEL = "Join Links"
 MOD_TEAMSPEAK3_JOIN_LINKS_DESC = "clickable links to join directly on server or channel"
 
+MOD_TEAMSPEAK3_JOIN_LINKS_SERVER = "Server"
+MOD_TEAMSPEAK3_JOIN_LINKS_ALL = "Server and Channel"
+
 MOD_TEAMSPEAK3_JOIN_PASSWORD_LABEL = "Join Password"
 MOD_TEAMSPEAK3_JOIN_PASSWORD_DESC = "Server Password"
 
