enh: predefined join nickname enh: ability to hide all clients with "-1" value enh: avatar cache expired option

--- a/language/de-DE/de-DE.mod_teamspeak3.ini
+++ b/language/de-DE/de-DE.mod_teamspeak3.ini
@@ -96,13 +96,16 @@ MOD_TEAMSPEAK3_JOIN_NICKNAME_DESC = "Nickname Vorgabe wenn man über das Modul j
 MOD_TEAMSPEAK3_FIELDSET_OTHER_LABEL = "Sonstiges"
 
 MOD_TEAMSPEAK3_CHANNEL_ID_LABEL = "Erster Channel (Eintrittspunkt)"
-MOD_TEAMSPEAK3_CHANNEL_ID_DESC = "ID. Zeigt nur diese und alle Sub-Channels an (bspw. auf Shared-Server)"
+MOD_TEAMSPEAK3_CHANNEL_ID_DESC = "ID. Zeigt nur diesen und alle Sub-Channels an (bspw. auf Shared-Server)"
 
 MOD_TEAMSPEAK3_CHANNEL_HIDE_LABEL = "Channel IDs Ausblenden"
 MOD_TEAMSPEAK3_CHANNEL_HIDE_DESC = "z.B. 1,2,3,4"
 
-MOD_TEAMSPEAK3_CLIENT_HIDE_LABEL = "Player IDs Ausblenden"
-MOD_TEAMSPEAK3_CLIENT_HIDE_DESC = "z.B. 1,2,3,4"
+MOD_TEAMSPEAK3_CLIENT_HIDE_LABEL = "Client IDs Ausblenden"
+MOD_TEAMSPEAK3_CLIENT_HIDE_DESC = "-1 blendet alle Clients aus! Alternativ z.B. 1,2,3,4"
 
 MOD_TEAMSPEAK3_MODULE_TITLE_LABEL = "Modultitel ersetzen"
 MOD_TEAMSPEAK3_MODULE_TITLE_DESC = "Ersetzt den Modultitel mit dem Servernamen. Außerdem wird der Servername im Baum nicht mehr angezeigt"
+
+MOD_TEAMSPEAK3_AVATAR_EXPIRED_LABEL = "Avatar Zwischenspeicher"
+MOD_TEAMSPEAK3_AVATAR_EXPIRED_DESC = "Angabe in Stunden wie lange Avatare zwischengespeichert werden sollen"
