--- a/language/en-GB/en-GB.mod_teamspeak3.ini
+++ b/language/en-GB/en-GB.mod_teamspeak3.ini
@@ -101,8 +101,11 @@ MOD_TEAMSPEAK3_CHANNEL_ID_DESC = "ID. display only this and sub channel (eg. on 
 MOD_TEAMSPEAK3_CHANNEL_HIDE_LABEL = "Channel IDs hide"
 MOD_TEAMSPEAK3_CHANNEL_HIDE_DESC = "eg. 1,2,3,4"
 
-MOD_TEAMSPEAK3_CLIENT_HIDE_LABEL = "Player IDs hide"
-MOD_TEAMSPEAK3_CLIENT_HIDE_DESC = "eg 1,2,3,4"
+MOD_TEAMSPEAK3_CLIENT_HIDE_LABEL = "Client IDs hide"
+MOD_TEAMSPEAK3_CLIENT_HIDE_DESC = "-1 = All, or eg. 1,2,3,4"
 
 MOD_TEAMSPEAK3_MODULE_TITLE_LABEL = "replace module title"
 MOD_TEAMSPEAK3_MODULE_TITLE_DESC = "with server name and hide server name from tree"
+
+MOD_TEAMSPEAK3_AVATAR_EXPIRED_LABEL = "Avatar Cache"
+MOD_TEAMSPEAK3_AVATAR_EXPIRED_DESC = "Hours to cache client avatars"
