fix: cache time in seconds new: cli file for updates via cron new: caching time info row (must be enabled)

--- a/language/de-DE/de-DE.mod_teamspeak3.ini
+++ b/language/de-DE/de-DE.mod_teamspeak3.ini
@@ -51,6 +51,9 @@ MOD_TEAMSPEAK3_INFOS_VIRTUALSERVER_CHANNELSONLINE = "Anzahl Channels"
 MOD_TEAMSPEAK3_INFOS_VIRTUALSERVER_CREATED = "Server erstellt"
 MOD_TEAMSPEAK3_INFOS_VIRTUALSERVER_FLAG_PASSWORD = "Passwort gesichert"
 
+MOD_TEAMSPEAK3_INFOS_CACHING_TIMESTAMP = "Cache Zeitpunkt"
+MOD_TEAMSPEAK3_INFOS_CACHING_TIMESTAMP_AGO = " (vor %s Sekunden)"
+
 MOD_TEAMSPEAK3_INFOS_CONNECTION_FILETRANSFER_BANDWIDTH_SENT = "Dateien: Bandbreite ausgehend"
 MOD_TEAMSPEAK3_INFOS_CONNECTION_FILETRANSFER_BANDWIDTH_RECEIVED = "Dateien: Bandbreite eingehend"
 
