--- a/language/en-GB/en-GB.mod_teamspeak3.ini
+++ b/language/en-GB/en-GB.mod_teamspeak3.ini
@@ -51,6 +51,9 @@ MOD_TEAMSPEAK3_INFOS_VIRTUALSERVER_CHANNELSONLINE = "Channels"
 MOD_TEAMSPEAK3_INFOS_VIRTUALSERVER_CREATED = "Server created"
 MOD_TEAMSPEAK3_INFOS_VIRTUALSERVER_FLAG_PASSWORD = "Password ensured"
 
+MOD_TEAMSPEAK3_INFOS_CACHING_TIMESTAMP = "Caching Time"
+MOD_TEAMSPEAK3_INFOS_CACHING_TIMESTAMP_AGO = " (%s seconds ago)"
+
 MOD_TEAMSPEAK3_INFOS_CONNECTION_FILETRANSFER_BANDWIDTH_SENT = "Files: Bandwith sent"
 MOD_TEAMSPEAK3_INFOS_CONNECTION_FILETRANSFER_BANDWIDTH_RECEIVED = "Files: Bandwith received"
 
